Added the settings page.

--- a/Reactor.Web/Views/Account/Login.cshtml
+++ b/Reactor.Web/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model LoginModel
+﻿@model Reactor.Web.ViewModels.Account.LoginModel
 @{
     ViewBag.Title = "title";
     Layout = "_AccountLayout";
