--- a/Reactor.Web/Views/Account/Register.cshtml
+++ b/Reactor.Web/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model RegisterModel
+﻿@model Reactor.Web.ViewModels.Account.RegisterModel
 @{
     ViewData["Title"] = "Register";
     Layout = "_AccountLayout";
