--- a/Reactor.Web/Views/Notifications/List.cshtml
+++ b/Reactor.Web/Views/Notifications/List.cshtml
@@ -13,8 +13,8 @@
                 
                 <div class="notification__title">
                     <h2 class="d-inline-block">All notifications</h2>
-                    <a class="d-inline-block pull-right" href="#">
-                        Settings
+                    <a class="d-inline-block pull-right" asp-controller="Settings" asp-action="Notifications">
+                        <i class="fa fa-cog"></i> settings
                     </a>
                 </div>
                 <div id="mainNotificationContainer"></div>
