--- a/Reactor.Web/Views/Shared/Components/SuggestedFriends/Default.cshtml
+++ b/Reactor.Web/Views/Shared/Components/SuggestedFriends/Default.cshtml
@@ -9,7 +9,7 @@
         <div class="box__content pb-5">
             <div class="d-flex">
                 <div class="mr-3">
-                    <img src="@user.GetPicture()" class="rounded-circle" width="50" height="50"/>
+                    <img src="@user.GetProfilePicture()" class="rounded-circle" width="50" height="50"/>
 
                 </div>
                 <div>
