--- a/Reactor.Web/Views/Shared/Templates/_Chat.cshtml
+++ b/Reactor.Web/Views/Shared/Templates/_Chat.cshtml
@@ -1,5 +1,5 @@
-﻿@using Reactor.Web.Models.Chat
-@model ChatModel
+﻿@using Reactor.Web.ViewModels.Chat
+@model Reactor.Web.ViewModels.Chat.ChatModel
     @if (Model.Position == MessagePosition.Left)
     {
         <div class="chat-box__container chat-box__container-left">
