--- a/Reactor.Web/Views/Shared/Templates/_MiniNotification.cshtml
+++ b/Reactor.Web/Views/Shared/Templates/_MiniNotification.cshtml
@@ -7,7 +7,7 @@
 <li class="dropdown__item">
     <a href="#">
         <div class="pull-left clearfix">
-            <img src="@sender.GetPicture()" alt="User Image">
+            <img src="@sender.GetProfilePicture()" alt="User Image">
         </div>
         <small>
             <i class="fa fa-clock-o"></i> <time class="timeago" datetime="@Model.CreatedOn.ToString("o")"></time>
