--- a/Reactor.Web/Views/_ViewImports.cshtml
+++ b/Reactor.Web/Views/_ViewImports.cshtml
@@ -1,9 +1,7 @@
-﻿@using Reactor.Web.Models.Account
-@using Reactor.Core.Domain.Posts
+﻿@using Reactor.Core.Domain.Posts
 @using Reactor.Core.Domain.Notifications
 @using Reactor.Services.Users
 @using Reactor.Web.Infrastructure.Helpers
-@using Reactor.Web.Models.Profile
 @using Reactor.Services.Follows
 @using Reactor.Services.Posts
 @using Reactor.Core.Domain.Follows;
