--- a/Reactor.Web/Views/Settings/Basic.cshtml
+++ b/Reactor.Web/Views/Settings/Basic.cshtml
@@ -69,7 +69,7 @@
     </div>
 
     <div class="form__group">
-        <button type="submit" class="btn btn-outline-success">Save Changes</button>
+        <button type="submit" class="button button--animated button--blue"><i class="fa fa-edit"></i> Save Changes</button>
     </div>
 
 </form>
