--- a/Reactor.Web/Views/Settings/Notifications.cshtml
+++ b/Reactor.Web/Views/Settings/Notifications.cshtml
@@ -66,7 +66,8 @@
    
     <div class="settings__content">
         <div class="form__group">
-            <button type="submit" class="btn btn-outline-secondary">Save Changes</button>
+            <button type="submit" class="button button--animated button--blue"><i class="fa fa-edit"></i> Save Changes</button>
+
         </div>
     </div>
 </form>
