--- a/Reactor.Web/Views/Shared/Components/SuggestedFriends/Default.cshtml
+++ b/Reactor.Web/Views/Shared/Components/SuggestedFriends/Default.cshtml
@@ -16,7 +16,7 @@
                     <span class="d-block font-weight-bold suggested__name">@user.FullName</span>
 
                     <form asp-controller="Friend" asp-action="AddFriendRequest" method="post" asp-route-requestedToId="@user.Id">
-                        <button class="btn btn-success"><i class="fa fa-user-plus"></i> Add as friend</button>
+                        <button class="button button--blue button--sm button--animated" type="submit"><i class="fa fa-user-plus"></i> send request</button>
                     </form>
                 </div>
 
