--- a/Reactor.Web/Views/Home/Index.cshtml
+++ b/Reactor.Web/Views/Home/Index.cshtml
@@ -10,9 +10,7 @@
         <div class="row mt-2">
             <div class="col-md-3">
                 Col 1
-                <form asp-antiforgery="true" asp-controller="Account" asp-action="Logout">
-                    <button type="submit" class="btn btn-primary">Logout</button>
-                </form>
+               
             </div>
             <div class="col-md-6">
                 <div class="status">
@@ -27,7 +25,7 @@
                             <input type="file" id="file" accept=".jpg,.jpeg,.png,.gif" class="form__input-file js-inputfile" asp-for="Files" data-multiple-caption="{count} files selected" multiple/>
                             <label for="file" class="u-margin-left-medium"><i class="fa fa-image"></i>&nbsp; <span>Photo</span></label>
                             <div class="float-right">
-                                <button type="submit" class="btn btn-success"><i class="fa fa-globe"></i> Post</button>
+                                <button type="submit" class="button button--animated button--blue"><i class="fa fa-globe"></i> Post</button>
                             </div>
                         </div>
 
@@ -58,6 +56,5 @@
 
     </div>
 
-   @await Html.PartialAsync("_AntiForgery")
     
 </section>
