--- a/Reactor.Web/Views/Shared/Templates/_Chat.cshtml
+++ b/Reactor.Web/Views/Shared/Templates/_Chat.cshtml
@@ -2,29 +2,33 @@
 @model Reactor.Web.ViewModels.Chat.ChatModel
     @if (Model.Position == MessagePosition.Left)
     {
-        <div class="chat-box__container chat-box__container-left">
-            <div class="chat-box__info">
-                <h2 class="chat-box__name pull-left">@Model.FullName</h2>
-                <time class="timeago chat-box__time pull-right" datetime="@Model.CreatedOn.ToString("o")"></time>
+        <div class="chat-box__container chat-box__container-left clearfix">
+            <div class="chat-box__inner-left">
+                <img class="chat-box__img-left" src="@Model.ProfilePicture" data-toggle="tooltip" title="@Model.FullName" data-placement="top"/>
+
+                <div class="chat-box__message clearfix">
+                    @Model.Message
+                </div>
+                <time class="timeago chat-box__time pull-left" datetime="@Model.CreatedOn.ToString("o")"></time>
             </div>
-            <img class="chat-box__img-left" src="@Model.ProfilePicture"/>
-            <div class="chat-box__message">
-                @Model.Message
-            </div>
+         
         </div>
         
     }
     else
     {
-        <div class="chat-box__container chat-box__container-right">
-            <div class="chat-box__info">
-                <time class="timeago chat-box__time pull-left" datetime="@Model.CreatedOn.ToString("o")"></time>
-                <h2 class="chat-box__name pull-right">@Model.FullName</h2>
+        <div class="chat-box__container chat-box__container-right clearfix">
+       
+            <div class="chat-box__inner-right">
+                <img class="chat-box__img-right" src="@Model.ProfilePicture" data-toggle="tooltip" title="@Model.FullName" data-placement="top"/>
+                <div class="chat-box__message">
+                    @Model.Message
+
+                </div>
+                <time class="timeago chat-box__time pull-right" datetime="@Model.CreatedOn.ToString("o")"></time>
+
             </div>
-            <img class="chat-box__img-right" src="@Model.ProfilePicture"/>
-            <div class="chat-box__message">
-                @Model.Message
-            </div>
+          
         </div>
         
     }
