Updated the project to .net core 2.1.

--- a/Reactor.Web/Views/Account/Login.cshtml
+++ b/Reactor.Web/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Reactor.Web.ViewModels.Account.LoginModel
 @{
-    ViewBag.Title = "title";
+    ViewData["Title"] = "Register a new account";
     Layout = "_AccountLayout";
 }
 <div class="form">
