--- a/Reactor.Web/Views/Account/Register.cshtml
+++ b/Reactor.Web/Views/Account/Register.cshtml
@@ -1,9 +1,8 @@
 ﻿@model Reactor.Web.ViewModels.Account.RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Login to your account";
     Layout = "_AccountLayout";
 }
-
 <div class="form">
     <h2 class="form__title">Register a new account</h2>
     <form asp-action="Register" asp-antiforgery="true" enctype="multipart/form-data">
