--- a/Reactor.Web/Views/Chat/Index.cshtml
+++ b/Reactor.Web/Views/Chat/Index.cshtml
@@ -29,7 +29,7 @@
                       
                     </div>
                     <div class="chat-box__footer">
-                        <input class="chat-box__input" type="text" placeholder="Wite something.."/>
+                        <input class="chat-box__input" type="text"/>
                     </div>
                     
                     <div class="chat-box__spinner">
