--- a/Reactor.Web/Views/Profile/Followees.cshtml
+++ b/Reactor.Web/Views/Profile/Followees.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Follow>
+﻿@using Reactor.Core.Helpers
+@model IEnumerable<Follow>
 @inject CommonHelper CommonHelper
 @{
     ViewBag.Title = "Following";
