--- a/Reactor.Web/Views/Shared/Components/ProfileCover/Default.cshtml
+++ b/Reactor.Web/Views/Shared/Components/ProfileCover/Default.cshtml
@@ -1,4 +1,5 @@
-﻿@model Reactor.Web.ViewModels.Profile.ProfileCoverViewModel
+﻿@using Reactor.Core.Helpers
+@model Reactor.Web.ViewModels.Profile.ProfileCoverViewModel
 @inject CommonHelper CommonHelper
 @inject IUserService UserService
 
