--- a/Reactor.Web/Views/Profile/Profile.cshtml
+++ b/Reactor.Web/Views/Profile/Profile.cshtml
@@ -1,4 +1,5 @@
-﻿@using Reactor.Web.ViewModels.Profile
+﻿@using Reactor.Core.Helpers
+@using Reactor.Web.ViewModels.Profile
 @model ProfileViewModel
 @inject CommonHelper CommonHelper
 @{
@@ -39,7 +40,7 @@
                 @if (Model.TotalFollowers > 0)
                 {
                     <li class="box__item">
-                        <span class="fa fa-rss-square box__icon"></span> Followed by
+                        <span class="fa fa-rss box__icon"></span> Followed by
                         @if (Model.TotalFollowers == 1)
                         {
                             <a class="box__link" asp-action="GetUserFollowers"> @Model.TotalFollowers person</a>
