--- a/Reactor.Web/Views/Shared/Templates/_Chat.cshtml
+++ b/Reactor.Web/Views/Shared/Templates/_Chat.cshtml
@@ -1,36 +1,53 @@
 ﻿@using Reactor.Web.ViewModels.Chat
-@model Reactor.Web.ViewModels.Chat.ChatModel
-    @if (Model.Position == MessagePosition.Left)
-    {
-        <div class="chat-box__container chat-box__container-left clearfix">
-            <div class="chat-box__inner-left">
-                <img class="chat-box__img-left" src="@Model.ProfilePicture" data-toggle="tooltip" title="@Model.FullName" data-placement="top"/>
-
-                <div class="chat-box__message clearfix">
-                    @Model.Message
-                </div>
-                <time class="timeago chat-box__time pull-left" datetime="@Model.CreatedOn.ToString("o")"></time>
+@model ChatModel
+@if (Model.Position == MessagePosition.Left)
+{
+    <div class="chat-box__container chat-box__container-left clearfix">
+        <div class="chat-box__inner-left">
+            <img class="chat-box__img-left" src="@Model.ProfilePicture" data-toggle="tooltip" title="@Model.FullName" data-placement="top"/>
+            <div class="chat-box__message clearfix">
+                @Html.Raw(Model.Message)
             </div>
-         
-        </div>
-        
-    }
-    else
-    {
-        <div class="chat-box__container chat-box__container-right clearfix">
-       
-            <div class="chat-box__inner-right">
-                <img class="chat-box__img-right" src="@Model.ProfilePicture" data-toggle="tooltip" title="@Model.FullName" data-placement="top"/>
-                <div class="chat-box__message">
-                    @Model.Message
-
+            <time class="timeago chat-box__time pull-left" datetime="@Model.CreatedOn.ToString("o")"></time>
+            @if (Model.IsRead)
+            {
+                <div style="clear: both; margin-top: -10px" class="pull-left text-muted">
+                    <i class="fa fa-check" style="font-size: 8px"></i> <small style="font-size: 10px">seen</small>
                 </div>
-                <time class="timeago chat-box__time pull-right" datetime="@Model.CreatedOn.ToString("o")"></time>
-
-            </div>
-          
+            }
+            else
+            {
+                <div style="clear: both; margin-top: -10px" class="pull-left text-muted d-none message-seen-@(Model.MessageId)">
+                    <i class="fa fa-check" style="font-size: 8px"></i> <small style="font-size: 10px">seen</small>
+                </div>
+            }
         </div>
-        
-    }
 
+    </div>
+}
+else
+{
+    <div class="chat-box__container chat-box__container-right clearfix">
 
+        <div class="chat-box__inner-right">
+            <img class="chat-box__img-right" src="@Model.ProfilePicture" data-toggle="tooltip" title="@Model.FullName" data-placement="top"/>
+            <div class="chat-box__message">
+                @Html.Raw(Model.Message)
+            </div>
+            <time class="timeago chat-box__time pull-right" datetime="@Model.CreatedOn.ToString("o")"></time>
+            @if (Model.IsRead)
+            {
+                <div style="clear: both; margin-top: -10px" class="text-muted pull-right">
+                    <i class="fa fa-check" style="font-size: 8px"></i> <small style="font-size: 10px">seen</small>
+                </div>
+            }
+            else
+            {
+                <div style="clear: both; margin-top: -10px" class="text-muted pull-right d-none message-seen-@(Model.MessageId)">
+                    <i class="fa fa-check" style="font-size: 8px"></i> <small style="font-size: 10px">seen</small>
+                </div>
+            }
+        </div>
+
+    </div>
+}
